--- a/index.html
+++ b/index.html
@@ -1,7 +1,20 @@
 <!DOCTYPE html>
-<html>
+<head>
+<link href="/normalize.css" rel="stylesheet">
+<style>
+  header {
+    text-align: center;
+  }
+  ul {
+    padding: 10px;
+  }
+  li {
+    display: inline;
+  }
+  </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub!.</p>
+  <header>
+    <img src="https://bit.ly/3C4vhs1">
+  </header>
 </body>
-</html>
