--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
   header {
     text-align: center;
   }
-  ul {
-    padding: 10px;
-  }
-  li {
-    display: inline;
-  }
+  img {
+    height : 100px;
+    width : 250px;
+}
   </style>
 </head>
 <body>
