--- a/index.html
+++ b/index.html
@@ -1,15 +1,7 @@
 <!DOCTYPE html>
 <head>
 <link href="/normalize.css" rel="stylesheet">
-<style>
-  header {
-    text-align: center;
-  }
-  img {
-    height : 100px;
-    width : 250px;
-  }
-  </style>
+<link rel="stylesheet" href="index.css">
 </head>
 <body>
   <header>
